--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ header{
     font-size: 30px;
 }
 article:first-child {
-    background-color: red;
     font-style: italic;
-    font-weight: bold;
+    font-weight: bold ;
+    color:red;
+    
 }
