--- a/style.css
+++ b/style.css
@@ -1,14 +1,69 @@
 body{
-    background-color: greenyellow
+    background-color: greenyellow;
+}
+
+#wrapper{
+    display: flex;
+    flex-direction: column;
+    position:relative;
+    margin: auto;
+    width: 100%;
+}
+
+
+.side-bar{
+    width: 25%;
 }
 header{
     text-align: center;
     color: blue;
     font-size: 30px;
 }
-article:first-child {
-    font-style: italic;
-    font-weight: bold ;
-    color:red;
+nav:hover{
+    background-color: red;
+    align-content: space-between;
+
     
 }
+article:first-child {
+    display: flex;
+    flex-wrap: wrap;
+    font-style: italic;
+    font-weight: bold ;
+    display: inline-block;
+    
+    }
+    
+
+.main-container{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    width: 75%;
+                 
+}
+.container2{
+     display: flex;
+    flex-direction: row;
+    align-items: flex-end; 
+    width: 75%;
+}
+.part{
+    width: 32%;
+    padding: 0px 5px;
+    font-style:;
+    font-weight: bold;
+    
+}
+
+@media screen and (min-width: 900px) {
+	body {
+		
+	}
+
+
+
+
+
+
+    
