fixed my sidebar

--- a/style.css
+++ b/style.css
@@ -4,15 +4,16 @@ body{
 
 #wrapper{
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+   }
+.flex-wrapper{
+    display: flex;
     flex-direction: column;
-    position:relative;
-    margin: auto;
-    width: 100%;
 }
 
-
 .side-bar{
-    width: 25%;
+    
 }
 header{
     text-align: center;
@@ -26,32 +27,28 @@ nav:hover{
     
 }
 article:first-child {
-    display: flex;
-    flex-wrap: wrap;
-    font-style: italic;
+   
+  font-style: italic;
     font-weight: bold ;
-    display: inline-block;
+          }
     
-    }
-    
-
 .main-container{
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
-    width: 75%;
+    align-items: stretch;
+    
                  
 }
 .container2{
      display: flex;
     flex-direction: row;
-    align-items: flex-end; 
-    width: 75%;
+    align-items: stretch; 
+    
 }
 .part{
-    width: 32%;
+
     padding: 0px 5px;
-    font-style:;
+    font-style:italic;
     font-weight: bold;
     
 }
